5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1764_2390.log
== SUBMITION (2019-05-30 01:13:33) 
-- CODE:
v=array(eval(input("")))
v2=array(eval(input("")))

if(max(v)==v[0]):
	s=1
elif(max(v)==v[1]):
	s=2
elif(max(v)==v[2]):
	s=3
elif(max(v)==v[3]):
	s=4
elif(max(v)==v[4]):
	s=5
elif(max(v)==v[5]):
	s=6
elif(max(v)==v[6]):
	s=7
elif(max(v)==v[7]):
	s=8
elif(max(v)==v[8]):
	s=9
elif(max(v)==v[9]):
	s=10
elif(max(v)==v[10]):
	s=11
elif(max(v)==v[11]):
	s=12
print(s)
-- EXECUTION TIME:
0.232433
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 1, in <module>
    v=array(eval(input("")))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:13:35) 
-- CODE:
v=array(eval(input("")))
v2=array(eval(input("")))

if(max(v)==v[0]):
	s=1
elif(max(v)==v[1]):
	s=2
elif(max(v)==v[2]):
	s=3
elif(max(v)==v[3]):
	s=4
elif(max(v)==v[4]):
	s=5
elif(max(v)==v[5]):
	s=6
elif(max(v)==v[6]):
	s=7
elif(max(v)==v[7]):
	s=8
elif(max(v)==v[8]):
	s=9
elif(max(v)==v[9]):
	s=10
elif(max(v)==v[10]):
	s=11
elif(max(v)==v[11]):
	s=12
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:13:45) 
-- CODE:
from numpy import*
v=array(eval(input("")))
v2=array(eval(input("")))

if(max(v)==v[0]):
	s=1
elif(max(v)==v[1]):
	s=2
elif(max(v)==v[2]):
	s=3
elif(max(v)==v[3]):
	s=4
elif(max(v)==v[4]):
	s=5
elif(max(v)==v[5]):
	s=6
elif(max(v)==v[6]):
	s=7
elif(max(v)==v[7]):
	s=8
elif(max(v)==v[8]):
	s=9
elif(max(v)==v[9]):
	s=10
elif(max(v)==v[10]):
	s=11
elif(max(v)==v[11]):
	s=12
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:13:51) 
-- CODE:
from numpy import*
v=array(eval(input("")))
v2=array(eval(input("")))

if(max(v)==v[0]):
	s=1
elif(max(v)==v[1]):
	s=2
elif(max(v)==v[2]):
	s=3
elif(max(v)==v[3]):
	s=4
elif(max(v)==v[4]):
	s=5
elif(max(v)==v[5]):
	s=6
elif(max(v)==v[6]):
	s=7
elif(max(v)==v[7]):
	s=8
elif(max(v)==v[8]):
	s=9
elif(max(v)==v[9]):
	s=10
elif(max(v)==v[10]):
	s=11
elif(max(v)==v[11]):
	s=12
print(s)
-- EXECUTION TIME:
0.358035
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
